# rumble-voip

./: .dockerignore  .env.example  .flutter-plugins-dependencies  .gitignore  AUDIO_DOC.md  CHANGELOG.md  DESIGN.md  DOCKER_GUIDE.md  Dockerfile  GEMINI.md  Justfile  PLAN.md  README.md  SPECIFICATION.md  analysis_results.txt  docker-compose.yml  generate_audio.dart  ios_run_log.txt  justfile  pubspec.yaml  test_original.pcm  test_original_f32.pcm  test_original_s16.pcm
.githooks/: post-commit
.github/workflows/: windows-build.yml
.rumble/: guidelines.md
android/: gradle.properties
android/app/: build.gradle.kts
assets/: icon.af  icon.af~lock~
docs/: DESIGN_SYSTEM.md
integration_test/: audio_integrity_test.dart  simple_test.dart
ios/: Podfile
ios/Runner/: AppDelegate.swift  Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/components/: add_server_dialog.dart  audio_input_indicator.dart  auto_connect_dialog.dart  channel_tree.dart  chat_view.dart  debug_audio_test.dart  hotkey_recorder.dart  image_gallery.dart  link_preview.dart  loading_screen.dart  media_gallery.dart  permission_banner.dart  permission_prompt.dart  ptt_button.dart  rumble_tooltip.dart  server_actions.dart  server_card.dart
lib/models/: certificate.dart  chat_message.dart  hotkey_action.dart  server.dart
lib/services/: audio_playback_service.dart  background_service.dart  certificate_service.dart  connectivity_service.dart  hotkey_service.dart  mumble_ping_service.dart  mumble_service.dart  server_provider.dart  settings_service.dart  update_service.dart
lib/utils/: html_utils.dart  (+4 more)
linux/: CMakeLists.txt
macos/: Podfile
rust/: Cargo.toml  GEMINI.md  build.rs
rust/.cargo/: config.toml
rust/protos/: Mumble.proto  MumbleUDP.proto  README.md
rust/src/: frb_generated.rs  lib.rs  opus_ffi.rs
rust/src/api/: audio.rs  client.rs  mod.rs  opus.rs  simple.rs
rust/src/mumble/: audio.rs  codec.rs  config.rs  control.rs  mod.rs  opus_codec.rs  processing.rs  resample.rs  test_resample.rs  types.rs  voice.rs
rust/src/mumble/codec/: opus.rs
rust/src/mumble/dsp/: capture.rs  mod.rs  playback.rs  resample.rs  user_stream.rs
rust/src/mumble/hardware/: audio.rs
rust/src/mumble/net/: control.rs  tcp.rs  udp.rs  voice.rs
rust/src/mumble/processing/: input.rs  mod.rs  output.rs  user.rs
rust/src/mumble/protocol/: control.rs  crypt.rs  mod.rs  varint.rs  voice.rs
rust_builder/: pubspec.yaml
scripts/: update_branding.sh  version-management.sh
test/: generate_audio_test.dart  test_utils.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+91 files in other folders)
