[package]
name = "rust_lib_rumble"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
cpal = "0.17.3"
ringbuf = "0.4.8"
once_cell = "1.21.4"
tokio = { version = "1.50", features = ["full"] }
mumble-protocol-2x = "0.6"
openssl = { version = "0.10.76", features = ["vendored"] }
rubato = "1.0.1"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
tokio-util = { version = "0.7.18", features = ["codec", "net"] }
futures-util = "0.3.32"
tokio-openssl = "0.6.5"
protobuf = "3.7.2"
bytes = "1.11.1"
parking_lot = "0.12.5"
anyhow = "1.0.102"
byteorder = "1.5.0"
opus-head-sys = "0.1.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
strip = "symbols"
